--- a/temporada.html
+++ b/temporada.html
@@ -119,8 +119,8 @@
                     <td data-label="Local">Maps<br>Vila Nova, Porto Alegre</td>
                     <td data-label="Gols">
                         <ul>
-                            <li>Jogador 1 - 1 gol</li>
-                            <li>Jogador 2 - 1 gol</li>
+                            <li>Drinho - 1 gol</li>
+                            <li>Lucca - 1 gol</li>
                         </ul>
                     </td>
                 </tr>
